--- a/references.bib
+++ b/references.bib
@@ -103,6 +103,19 @@
 }
 
 % Reference 11
+@article{sullivan1997trends,
+  title = {Trends in Real Wage Growth},
+  author = {Sullivan, Daniel G.},
+  year = {1997},
+  month = {March},
+  journal = {Chicago Fed Letter},
+  number = {115},
+  publisher = {Federal Reserve Bank of Chicago},
+  url = {https://www.chicagofed.org/publications/chicago-fed-letter/1997/march-115},
+  note = {accessed January 2026}
+}
+
+% Reference 12
 @misc{bea_data,
   title = {Interactive Data Application},
   author = {{Bureau of Economic Analysis}},
@@ -111,7 +124,7 @@
   note = {accessed January 2026}
 }
 
-% Reference 12
+% Reference 13
 @misc{fred_data,
   title = {Federal Reserve Economic Data (FRED)},
   author = {{Federal Reserve Bank of St. Louis}},
@@ -120,7 +133,7 @@
   note = {accessed January 2026}
 }
 
-% Reference 13
+% Reference 14
 @manual{bea_r_package,
   title = {bea.R: Bureau of Economic Analysis API},
   author = {Batch, Andrea and Chen, Jeff and Kampas, Walt},
@@ -129,7 +142,7 @@
   url = {https://CRAN.R-project.org/package=bea.R}
 }
 
-% Reference 14
+% Reference 15
 @manual{fredr_package,
   title = {fredr: An R Client for the 'FRED' API},
   author = {Boysel, Sam and Vaughan, Davis},
@@ -138,7 +151,7 @@
   url = {https://CRAN.R-project.org/package=fredr}
 }
 
-% Reference 15
+% Reference 16
 @article{hughes2019value,
   title = {The Value of {US} Government Data to {US} Business Decisions},
   author = {Hughes-Cromwick, Ellen and Coronado, Julia},
@@ -150,7 +163,7 @@
   doi = {10.1257/jep.33.1.131}
 }
 
-% Reference 16
+% Reference 17
 @misc{dallasfed_nominal,
   title = {Deflating Nominal Values to Real Values},
   author = {{Federal Reserve Bank of Dallas}},
@@ -159,7 +172,7 @@
   note = {accessed January 2026}
 }
 
-% Reference 17
+% Reference 18
 @misc{hamilton2014logarithms,
   title = {Use of logarithms in economics},
   author = {Hamilton, James D. and Chinn, Menzie},
@@ -169,7 +182,7 @@
   note = {Econbrowser. Accessed January 2026}
 }
 
-% Reference 18
+% Reference 19
 @misc{bls_ppi_concepts,
   title = {Producer Price Indexes: Concepts},
   author = {{Bureau of Labor Statistics}},
@@ -179,7 +192,17 @@
   note = {BLS Handbook of Methods. Accessed January 2026}
 }
 
-% Reference 19
+% Reference 20
+@misc{bls_cpi_concepts,
+  title = {Consumer Price Index: Concepts},
+  author = {{Bureau of Labor Statistics}},
+  year = {2025},
+  month = {April},
+  url = {https://www.bls.gov/opub/hom/cpi/concepts.htm},
+  note = {BLS Handbook of Methods. Accessed January 2026}
+}
+
+% Reference 21
 @article{rudkin2025ballmapper,
   title = {An Introduction to Topological Data Analysis Ball Mapper in R},
   author = {Rudkin, Simon},
@@ -189,7 +212,7 @@
   note = {accessed January 2026}
 }
 
-% Reference 20
+% Reference 22
 @article{qiu2020refining,
   title = {Refining understanding of corporate failure through a topological data analysis mapping of {A}ltman's {Z}-score model},
   author = {Qiu, Wanling and Rudkin, Simon and D{\l}otko, Pawe{\l}},
@@ -200,7 +223,27 @@
   doi = {10.1016/j.eswa.2020.113475}
 }
 
-% Reference 21
+% Reference 23
+@misc{bls_cps_concepts,
+  title = {Current Population Survey: Concepts},
+  author = {{Bureau of Labor Statistics}},
+  year = {2018},
+  month = {April},
+  url = {https://www.bls.gov/opub/hom/cps/concepts.htm},
+  note = {BLS Handbook of Methods. Accessed January 2026}
+}
+
+% Reference 24
+@misc{fed_monetary_goals,
+  title = {Monetary Policy: What Are Its Goals? How Does It Work?},
+  author = {{Board of Governors of the Federal Reserve System}},
+  year = {2021},
+  month = {July},
+  url = {https://www.federalreserve.gov/monetarypolicy/monetary-policy-what-are-its-goals-how-does-it-work.htm},
+  note = {accessed January 2026}
+}
+
+% Reference 25
 @article{kolesnikova2011jobless,
   title = {Jobless recoveries: causes and consequences},
   author = {Kolesnikova, Natalia A. and Liu, Yang},
@@ -212,7 +255,7 @@
   note = {accessed January 2026}
 }
 
-% Reference 22
+% Reference 26
 @misc{bryan2013greatinflation,
   title = {The Great Inflation},
   author = {Bryan, Michael},
@@ -222,7 +265,7 @@
   note = {Federal Reserve History. Accessed January 2026}
 }
 
-% Reference 23
+% Reference 27
 @misc{stlouisfed2023lags,
   title = {What Are "Long and Variable Lags" in Monetary Policy?},
   author = {{Federal Reserve Bank of St. Louis}},
@@ -232,7 +275,7 @@
   note = {On the Economy Blog. Accessed January 2026}
 }
 
-% Reference 24
+% Reference 28
 @misc{corbett2013oilshock,
   title = {Oil Shock of 1973–74},
   author = {Corbett, Michael},
