--- a/references.bib
+++ b/references.bib
@@ -9,37 +9,6 @@
 }
 
 % Reference 2
-@article{kemme2025persistent,
-  title = {Persistent Homology: A Pedagogical Introduction with Biological Applications},
-  author = {Kemme, Aurelie Jodelle and Agyingi, Collins Amburo},
-  year = {2025},
-  journal = {arXiv preprint arXiv:2505.06583},
-  url = {https://arxiv.org/abs/2505.06583},
-  note = {accessed January 2026}
-}
-
-% Reference 3
-@misc{trotta2023linear,
-  title = {Mastering Linear Regression: The Definitive Guide For Aspiring Data Scientists},
-  author = {Trotta, Federico},
-  year = {2023},
-  month = {April},
-  url = {https://towardsdatascience.com/mastering-linear-regression-the-definitive-guide-for-aspiring-data-scientists-7abd37fcb9ed/},
-  note = {Towards Data Science. Accessed January 2026}
-}
-
-% Reference 4
-@misc{gfg_probability,
-  title = {Probability Theory},
-  author = {{GeeksforGeeks}},
-  year = {2026},
-  month = {January},
-  day = {10},
-  url = {https://www.geeksforgeeks.org/maths/probability-theory/},
-  note = {Accessed January 2026}
-}
-
-% Reference 5
 @article{chazal2021introduction,
   title = {An Introduction to Topological Data Analysis: Fundamental and Practical Aspects for Data Scientists},
   author = {Chazal, Frédéric and Michel, Bertrand},
@@ -50,7 +19,7 @@
   doi = {10.3389/frai.2021.667963}
 }
 
-% Reference 6
+% Reference 3
 @article{dlotko2019ball,
   title = {Ball mapper: a shape summary for topological data analysis},
   author = {D{\l}otko, Pawe{\l}},
@@ -60,7 +29,7 @@
   note = {accessed January 2026}
 }
 
-% Reference 7
+% Reference 4
 @article{dlotko2019mapping,
   title = {Topologically Mapping the Macroeconomy},
   author = {D{\l}otko, Pawe{\l} and Rudkin, Simon and Qiu, Wanling},
@@ -70,7 +39,7 @@
   note = {accessed January 2026}
 }
 
-% Reference 8
+% Reference 5
 @misc{mcclung2024fisher,
   title = {Fisher Effect},
   author = {McClung, Sean},
@@ -80,7 +49,7 @@
   note = {INOMICS. Accessed January 2026}
 }
 
-% Reference 9
+% Reference 6
 @incollection{michaelides2024fisher,
   title = {The Fisher Equation},
   author = {Michaelides, Panayotis G.},
@@ -92,7 +61,7 @@
   url = {https://link.springer.com/chapter/10.1007/978-3-031-76140-9_9}
 }
 
-% Reference 10
+% Reference 7
 @misc{bls_ppi_cpi_comparison,
   title = {How Does the Producer Price Index Differ from the Consumer Price Index? Comparing the Personal Consumption {PPI} with the {CPI}},
   author = {{Bureau of Labor Statistics}},
@@ -102,7 +71,7 @@
   note = {Methodology Report. Accessed January 2026}
 }
 
-% Reference 11
+% Reference 8
 @article{sullivan1997trends,
   title = {Trends in Real Wage Growth},
   author = {Sullivan, Daniel G.},
@@ -115,7 +84,7 @@
   note = {accessed January 2026}
 }
 
-% Reference 12
+% Reference 9
 @misc{bea_data,
   title = {Interactive Data Application},
   author = {{Bureau of Economic Analysis}},
@@ -124,7 +93,7 @@
   note = {accessed January 2026}
 }
 
-% Reference 13
+% Reference 10
 @misc{fred_data,
   title = {Federal Reserve Economic Data (FRED)},
   author = {{Federal Reserve Bank of St. Louis}},
@@ -133,7 +102,7 @@
   note = {accessed January 2026}
 }
 
-% Reference 14
+% Reference 11
 @manual{bea_r_package,
   title = {bea.R: Bureau of Economic Analysis API},
   author = {Batch, Andrea and Chen, Jeff and Kampas, Walt},
@@ -142,7 +111,7 @@
   url = {https://CRAN.R-project.org/package=bea.R}
 }
 
-% Reference 15
+% Reference 12
 @manual{fredr_package,
   title = {fredr: An R Client for the 'FRED' API},
   author = {Boysel, Sam and Vaughan, Davis},
@@ -151,7 +120,7 @@
   url = {https://CRAN.R-project.org/package=fredr}
 }
 
-% Reference 16
+% Reference 13
 @article{hughes2019value,
   title = {The Value of {US} Government Data to {US} Business Decisions},
   author = {Hughes-Cromwick, Ellen and Coronado, Julia},
@@ -163,7 +132,7 @@
   doi = {10.1257/jep.33.1.131}
 }
 
-% Reference 17
+% Reference 14
 @misc{dallasfed_nominal,
   title = {Deflating Nominal Values to Real Values},
   author = {{Federal Reserve Bank of Dallas}},
@@ -172,7 +141,7 @@
   note = {accessed January 2026}
 }
 
-% Reference 18
+% Reference 15
 @misc{hamilton2014logarithms,
   title = {Use of logarithms in economics},
   author = {Hamilton, James D. and Chinn, Menzie},
@@ -182,7 +151,7 @@
   note = {Econbrowser. Accessed January 2026}
 }
 
-% Reference 19
+% Reference 16
 @misc{bls_ppi_concepts,
   title = {Producer Price Indexes: Concepts},
   author = {{Bureau of Labor Statistics}},
@@ -192,7 +161,7 @@
   note = {BLS Handbook of Methods. Accessed January 2026}
 }
 
-% Reference 20
+% Reference 17
 @misc{bls_cpi_concepts,
   title = {Consumer Price Index: Concepts},
   author = {{Bureau of Labor Statistics}},
@@ -202,7 +171,7 @@
   note = {BLS Handbook of Methods. Accessed January 2026}
 }
 
-% Reference 21
+% Reference 18
 @article{rudkin2025ballmapper,
   title = {An Introduction to Topological Data Analysis Ball Mapper in R},
   author = {Rudkin, Simon},
@@ -212,7 +181,7 @@
   note = {accessed January 2026}
 }
 
-% Reference 22
+% Reference 19
 @article{qiu2020refining,
   title = {Refining understanding of corporate failure through a topological data analysis mapping of {A}ltman's {Z}-score model},
   author = {Qiu, Wanling and Rudkin, Simon and D{\l}otko, Pawe{\l}},
@@ -223,7 +192,7 @@
   doi = {10.1016/j.eswa.2020.113475}
 }
 
-% Reference 23
+% Reference 20
 @misc{bls_cps_concepts,
   title = {Current Population Survey: Concepts},
   author = {{Bureau of Labor Statistics}},
@@ -233,7 +202,50 @@
   note = {BLS Handbook of Methods. Accessed January 2026}
 }
 
+% Reference 21
+@misc{investopedia_demandpull,
+  title = {Demand-Pull Inflation: Definition, How It Works, Causes, vs. Cost-Push Inflation},
+  author = {{Investopedia}},
+  year = {n.d.},
+  url = {https://www.investopedia.com/terms/d/demandpullinflation.asp},
+  note = {accessed January 2026}
+}
+
+% Reference 22
+@article{marsh2021inflation,
+  title = {Look at 1960s, not 1970s, to learn how {US} inflation took hold},
+  author = {Marsh, David},
+  year = {2021},
+  month = {November},
+  journal = {OMFIF},
+  url = {https://www.omfif.org/2021/11/look-at-1960s-not-1970s-to-learn-how-us-inflation-took-hold/},
+  note = {accessed January 2026}
+}
+
+% Reference 23
+@misc{evercore2024booms,
+  title = {Booms and Busts: A Brief History of Capital Spending Cycles},
+  author = {{Evercore Wealth and Trust}},
+  year = {2024},
+  month = {September},
+  day = {30},
+  url = {https://evercorewealthandtrust.com/booms-and-busts-a-brief-history-of-capital-spending-cycles/},
+  note = {accessed January 2026}
+}
+
 % Reference 24
+@article{sussman2019wealth,
+  title = {New Estimates of the Stock Market Wealth Effect},
+  author = {Sussman, Anna Louie},
+  year = {2019},
+  month = {August},
+  journal = {NBER Digest},
+  publisher = {National Bureau of Economic Research},
+  url = {https://www.nber.org/digest/aug19/new-estimates-stock-market-wealth-effect},
+  note = {accessed January 2026}
+}
+
+% Reference 25
 @misc{fed_monetary_goals,
   title = {Monetary Policy: What Are Its Goals? How Does It Work?},
   author = {{Board of Governors of the Federal Reserve System}},
@@ -243,7 +255,7 @@
   note = {accessed January 2026}
 }
 
-% Reference 25
+% Reference 26
 @article{kolesnikova2011jobless,
   title = {Jobless recoveries: causes and consequences},
   author = {Kolesnikova, Natalia A. and Liu, Yang},
@@ -255,7 +267,7 @@
   note = {accessed January 2026}
 }
 
-% Reference 26
+% Reference 27
 @misc{bryan2013greatinflation,
   title = {The Great Inflation},
   author = {Bryan, Michael},
@@ -265,7 +277,7 @@
   note = {Federal Reserve History. Accessed January 2026}
 }
 
-% Reference 27
+% Reference 28
 @misc{stlouisfed2023lags,
   title = {What Are "Long and Variable Lags" in Monetary Policy?},
   author = {{Federal Reserve Bank of St. Louis}},
@@ -275,7 +287,7 @@
   note = {On the Economy Blog. Accessed January 2026}
 }
 
-% Reference 28
+% Reference 29
 @misc{corbett2013oilshock,
   title = {Oil Shock of 1973–74},
   author = {Corbett, Michael},
