--- a/references.bib
+++ b/references.bib
@@ -50,18 +50,6 @@
 }
 
 % Reference 6
-@incollection{michaelides2024fisher,
-  title = {The Fisher Equation},
-  author = {Michaelides, Panayotis G.},
-  booktitle = {21 Equations that Shaped the World Economy: Understanding the Theory Behind the Equations},
-  year = {2024},
-  publisher = {Springer},
-  pages = {113--120},
-  doi = {10.1007/978-3-031-76140-9_9},
-  url = {https://link.springer.com/chapter/10.1007/978-3-031-76140-9_9}
-}
-
-% Reference 7
 @misc{bls_ppi_cpi_comparison,
   title = {How Does the Producer Price Index Differ from the Consumer Price Index? Comparing the Personal Consumption {PPI} with the {CPI}},
   author = {{Bureau of Labor Statistics}},
@@ -71,7 +59,7 @@
   note = {Methodology Report. Accessed January 2026}
 }
 
-% Reference 8
+% Reference 7
 @article{sullivan1997trends,
   title = {Trends in Real Wage Growth},
   author = {Sullivan, Daniel G.},
@@ -84,7 +72,7 @@
   note = {accessed January 2026}
 }
 
-% Reference 9
+% Reference 8
 @misc{bea_data,
   title = {Interactive Data Application},
   author = {{Bureau of Economic Analysis}},
@@ -93,7 +81,7 @@
   note = {accessed January 2026}
 }
 
-% Reference 10
+% Reference 9
 @misc{fred_data,
   title = {Federal Reserve Economic Data (FRED)},
   author = {{Federal Reserve Bank of St. Louis}},
@@ -102,7 +90,7 @@
   note = {accessed January 2026}
 }
 
-% Reference 11
+% Reference 10
 @manual{bea_r_package,
   title = {bea.R: Bureau of Economic Analysis API},
   author = {Batch, Andrea and Chen, Jeff and Kampas, Walt},
@@ -111,7 +99,7 @@
   url = {https://CRAN.R-project.org/package=bea.R}
 }
 
-% Reference 12
+% Reference 11
 @manual{fredr_package,
   title = {fredr: An R Client for the 'FRED' API},
   author = {Boysel, Sam and Vaughan, Davis},
@@ -120,7 +108,7 @@
   url = {https://CRAN.R-project.org/package=fredr}
 }
 
-% Reference 13
+% Reference 12
 @article{hughes2019value,
   title = {The Value of {US} Government Data to {US} Business Decisions},
   author = {Hughes-Cromwick, Ellen and Coronado, Julia},
@@ -132,7 +120,7 @@
   doi = {10.1257/jep.33.1.131}
 }
 
-% Reference 14
+% Reference 13
 @misc{dallasfed_nominal,
   title = {Deflating Nominal Values to Real Values},
   author = {{Federal Reserve Bank of Dallas}},
@@ -141,7 +129,7 @@
   note = {accessed January 2026}
 }
 
-% Reference 15
+% Reference 14
 @misc{hamilton2014logarithms,
   title = {Use of logarithms in economics},
   author = {Hamilton, James D. and Chinn, Menzie},
@@ -151,14 +139,22 @@
   note = {Econbrowser. Accessed January 2026}
 }
 
+% Reference 15
+@misc{census_soc_methodology,
+  title = {Survey of Construction (SOC): Methodology},
+  author = {{U.S. Census Bureau}},
+  year = {n.d.},
+  url = {https://www.census.gov/construction/soc/methodology.html},
+  note = {accessed January 2026}
+}
+
 % Reference 16
-@misc{bls_ppi_concepts,
-  title = {Producer Price Indexes: Concepts},
+@misc{bls_ppi_handbook,
+  title = {Producer Price Indexes: Handbook of Methods},
   author = {{Bureau of Labor Statistics}},
-  year = {2025},
-  month = {July},
-  url = {https://www.bls.gov/opub/hom/ppi/concepts.htm},
-  note = {BLS Handbook of Methods. Accessed January 2026}
+  year = {n.d.},
+  url = {https://www.bls.gov/opub/hom/ppi/home.htm},
+  note = {Accessed January 2026}
 }
 
 % Reference 17
@@ -193,6 +189,15 @@
 }
 
 % Reference 20
+@manual{ballmapper_package,
+  title = {BallMapper: The Ball Mapper Algorithm},
+  author = {D{\l}otko, Pawe{\l}},
+  year = {2019},
+  note = {R package version 0.2.0. Accessed January 2026},
+  url = {https://CRAN.R-project.org/package=BallMapper}
+}
+
+% Reference 21
 @misc{bls_cps_concepts,
   title = {Current Population Survey: Concepts},
   author = {{Bureau of Labor Statistics}},
@@ -202,7 +207,7 @@
   note = {BLS Handbook of Methods. Accessed January 2026}
 }
 
-% Reference 21
+% Reference 22
 @misc{investopedia_demandpull,
   title = {Demand-Pull Inflation: Definition, How It Works, Causes, vs. Cost-Push Inflation},
   author = {{Investopedia}},
@@ -211,7 +216,7 @@
   note = {accessed January 2026}
 }
 
-% Reference 22
+% Reference 23
 @article{marsh2021inflation,
   title = {Look at 1960s, not 1970s, to learn how {US} inflation took hold},
   author = {Marsh, David},
@@ -222,7 +227,7 @@
   note = {accessed January 2026}
 }
 
-% Reference 23
+% Reference 24
 @misc{evercore2024booms,
   title = {Booms and Busts: A Brief History of Capital Spending Cycles},
   author = {{Evercore Wealth and Trust}},
@@ -233,7 +238,7 @@
   note = {accessed January 2026}
 }
 
-% Reference 24
+% Reference 25
 @article{sussman2019wealth,
   title = {New Estimates of the Stock Market Wealth Effect},
   author = {Sussman, Anna Louie},
@@ -245,7 +250,7 @@
   note = {accessed January 2026}
 }
 
-% Reference 25
+% Reference 26
 @misc{fed_monetary_goals,
   title = {Monetary Policy: What Are Its Goals? How Does It Work?},
   author = {{Board of Governors of the Federal Reserve System}},
@@ -255,7 +260,41 @@
   note = {accessed January 2026}
 }
 
-% Reference 26
+% Reference 27
+@article{csardi2006igraph,
+  title = {The igraph software package for complex network research},
+  author = {Csardi, Gabor and Nepusz, Tamas},
+  journal = {InterJournal, Complex Systems},
+  volume = {1695},
+  number = {5},
+  pages = {1--9},
+  year = {2006},
+  url = {https://igraph.org},
+  note = {accessed January 2026}
+}
+
+% Reference 28
+@manual{pedersen2024ggraph,
+  title = {ggraph: An Implementation of Grammar of Graphics for Graphs and Networks},
+  author = {Pedersen, Thomas Lin},
+  year = {2024},
+  note = {R package version 2.2.1. Accessed January 2026},
+  url = {https://CRAN.R-project.org/package=ggraph}
+}
+
+% Reference 29
+@incollection{michaelides2024fisher,
+  title = {The Fisher Equation},
+  author = {Michaelides, Panayotis G.},
+  booktitle = {21 Equations that Shaped the World Economy: Understanding the Theory Behind the Equations},
+  year = {2024},
+  publisher = {Springer},
+  pages = {113--120},
+  doi = {10.1007/978-3-031-76140-9_9},
+  url = {https://link.springer.com/chapter/10.1007/978-3-031-76140-9_9}
+}
+
+% Reference 30
 @article{kolesnikova2011jobless,
   title = {Jobless recoveries: causes and consequences},
   author = {Kolesnikova, Natalia A. and Liu, Yang},
@@ -267,7 +306,7 @@
   note = {accessed January 2026}
 }
 
-% Reference 27
+% Reference 31
 @misc{bryan2013greatinflation,
   title = {The Great Inflation},
   author = {Bryan, Michael},
@@ -277,7 +316,7 @@
   note = {Federal Reserve History. Accessed January 2026}
 }
 
-% Reference 28
+% Reference 32
 @misc{stlouisfed2023lags,
   title = {What Are "Long and Variable Lags" in Monetary Policy?},
   author = {{Federal Reserve Bank of St. Louis}},
@@ -287,7 +326,7 @@
   note = {On the Economy Blog. Accessed January 2026}
 }
 
-% Reference 29
+% Reference 33
 @misc{corbett2013oilshock,
   title = {Oil Shock of 1973–74},
   author = {Corbett, Michael},
